--- a/manifest.json
+++ b/manifest.json
@@ -27,25 +27,25 @@
   ],
   "shortcuts": [
     {
-      "name": "TopiaStyler",
-      "short_name": "TopiaStyler",
-      "description": "Launch the TopiaStyler visual editor",
-      "url": "https://topia-styler.vercel.app/",
+      "name": "Platform Apps",
+      "short_name": "Apps",
+      "description": "View platform applications",
+      "url": "/#services",
       "icons": [
         {
-          "src": "assets/logo_EasOfTopia.png",
+          "src": "assets/logo.png",
           "sizes": "96x96"
         }
       ]
     },
     {
-      "name": "Paletteniffer",
-      "short_name": "Paletteniffer",
-      "description": "Open the Paletteniffer color utility",
-      "url": "https://paletteniffer.vercel.app/",
+      "name": "Contact",
+      "short_name": "Contact",
+      "description": "Get in touch with us",
+      "url": "/#contact",
       "icons": [
         {
-          "src": "assets/logo_paletniffer.png",
+          "src": "assets/logo.png",
           "sizes": "96x96"
         }
       ]
